fix overflow in message-box #18

--- a/src/components/ui-kit-components/message-box/message-box.scss
+++ b/src/components/ui-kit-components/message-box/message-box.scss
@@ -1,11 +1,11 @@
 .message-box {
   background-color: $white-smoke;
   border-radius: 0.25rem;
-  height: 26.75rem;
+  // height: 26.75rem;
   width: 18rem;
 
   @media screen and (max-width: 400px) {
-    height: 25.5rem;
+    // height: 25.5rem;
     width: 15.5rem;
   }
 
@@ -47,70 +47,6 @@
     }
   }
 
-  &__body {
-    height: calc(100% - 7.1875rem);
-    width: 100%;
-  }
-
-  &__camera-button {
-    background: url('images/camera-icon.svg') center no-repeat;
-    display: inline-block;
-    height: 1.5625rem;
-    position: absolute;
-    right: 0.3125rem;
-    width: 1.5625rem;
-  }
-
-  &__chat {
-    height: calc(100% - 1.125rem - 1.8125rem);
-    margin: 1.125rem auto 1.8125rem;
-    position: relative;
-    width: 84.7%;
-
-    @media screen and (max-width: 400px) {
-      height: calc(100% - 1.125rem - 1rem);
-      margin-bottom: 1rem;
-    }
-  }
-
-  &__chat-button {
-    background: url('images/chat-icon.svg') center no-repeat;
-    display: inline-block;
-    height: 1.5625rem;
-    left: 0;
-    position: absolute;
-    top: 0.125rem;
-    width: 1.5625rem;
-  }
-
-  &__message {
-    background-color: $white;
-    border-radius: 0.3125rem;
-    color: $gray;
-    font-size: 0.8125rem;
-    height: 2rem;
-    letter-spacing: 0.039375rem;
-    padding: 1.25rem;
-    position: absolute;
-    text-align: left;
-    top: 2.6875rem;
-    width: calc(100% - 2.5rem);
-
-    &::after {
-      background-color: inherit;
-      border-radius: 0.125rem;
-      border-width: 0.375rem;
-      bottom: calc(100% - 0.34375rem);
-      content: '';
-      height: 0.625rem;
-      left: 47%;
-      margin-top: -0.375rem;
-      position: absolute;
-      transform: rotate(45deg);
-      width: 0.625rem;
-    }
-  }
-
   &__name {
     color: $white;
     font-family: 'Source Sans Pro', Arial, sans-serif;
@@ -131,15 +67,74 @@
     z-index: 1;
   }
 
-  &__reply {
+  &__chat {
+    margin: 1.15rem auto 1.8125rem;
+    position: relative;
+    width: 84.7%;
+
+    @media screen and (max-width: 400px) {
+      margin-bottom: 1rem;
+    }
+  }
+
+  &__buttons {
+    height: 2rem;
+    position: relative;
+  }
+
+  &__camera-button {
+    background: url('images/camera-icon.svg') center no-repeat;
+    display: inline-block;
+    height: 1.5625rem;
     position: absolute;
-    top: 8.125rem;
-    width: 100%;
+    right: 0.3125rem;
+    width: 1.5625rem;
+  }
+
+  &__chat-button {
+    background: url('images/chat-icon.svg') center no-repeat;
+    display: inline-block;
+    height: 1.5625rem;
+    left: 0;
+    position: absolute;
+    top: 0.125rem;
+    width: 1.5625rem;
+  }
+
+  &__message {
+    background-color: $white;
+    border-radius: 0.3125rem;
+    color: $gray;
+    font-size: 0.8125rem;
+    min-height: 2rem;
+    letter-spacing: 0.039375rem;
+    padding: 1.25rem;
+    position: relative;
+    text-align: left;
+    margin-top: 0.7rem;
+    width: calc(100% - 2.5rem);
+
+    &::after {
+      background-color: inherit;
+      border-radius: 0.125rem;
+      border-width: 0.375rem;
+      bottom: calc(100% - 0.34375rem);
+      content: '';
+      height: 0.625rem;
+      left: 47%;
+      margin-top: -0.375rem;
+      position: absolute;
+      transform: rotate(45deg);
+      width: 0.625rem;
+    }
+  }
+
+  &__reply {
+    margin-top: 0.9rem; 
   }
 
   &__reply-button {
-    bottom: -0.125rem;
-    position: absolute;
-    width: 100%;
+    height: 3.7rem;
+    margin-top: 0.85rem;
   }
 }
